[gd_scene load_steps=12 format=3 uid="uid://bojnbvnbsulyq"]

[ext_resource type="Texture2D" uid="uid://dnee8u0jhmilc" path="res://Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-1.png" id="1_gx5ym"]
[ext_resource type="Script" path="res://frog.gd" id="1_pcpx5"]
[ext_resource type="Texture2D" uid="uid://cjlyag7pca6kd" path="res://Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-2.png" id="2_puk5n"]
[ext_resource type="Texture2D" uid="uid://b2hu2ug4xdu4f" path="res://Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-3.png" id="3_g18uc"]
[ext_resource type="Texture2D" uid="uid://326od1dk31at" path="res://Sunny-land-files/Graphical Assets/sprites/frog/jump/frog-jump-1.png" id="5_d8t6b"]
[ext_resource type="Texture2D" uid="uid://mf454bed0wnh" path="res://Sunny-land-files/Graphical Assets/sprites/frog/jump/frog-jump-2.png" id="6_aovbp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hufj3"]
size = Vector2(20, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1npgu"]
animations = [{
"frames": [],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_aovbp")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_gx5ym")
}, {
"duration": 1.0,
"texture": ExtResource("1_gx5ym")
}, {
"duration": 1.0,
"texture": ExtResource("1_gx5ym")
}, {
"duration": 1.0,
"texture": ExtResource("1_gx5ym")
}, {
"duration": 1.0,
"texture": ExtResource("1_gx5ym")
}, {
"duration": 1.0,
"texture": ExtResource("2_puk5n")
}, {
"duration": 1.0,
"texture": ExtResource("3_g18uc")
}, {
"duration": 1.0,
"texture": ExtResource("3_g18uc")
}, {
"duration": 1.0,
"texture": ExtResource("2_puk5n")
}, {
"duration": 1.0,
"texture": ExtResource("1_gx5ym")
}, {
"duration": 1.0,
"texture": ExtResource("1_gx5ym")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_d8t6b")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_th10s"]
radius = 124.082

[sub_resource type="RectangleShape2D" id="RectangleShape2D_at8p2"]
size = Vector2(18, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odwll"]
size = Vector2(32, 12)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_pcpx5")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_hufj3")
metadata/_edit_lock_ = true

[node name="Ani" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_1npgu")
animation = &"Idle"
autoplay = "Idle"
metadata/_edit_lock_ = true

[node name="PlayDetection" type="Area2D" parent="."]
visible = false
position = Vector2(0, -9.5)

[node name="player_detection" type="CollisionShape2D" parent="PlayDetection"]
shape = SubResource("CircleShape2D_th10s")

[node name="PlayDeath" type="Area2D" parent="."]
position = Vector2(0, -9.5)

[node name="player_detection" type="CollisionShape2D" parent="PlayDeath"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_at8p2")

[node name="PlayHit" type="Area2D" parent="."]
position = Vector2(0, -9.5)

[node name="player_detection" type="CollisionShape2D" parent="PlayHit"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_odwll")

[node name="jump_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayDetection" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="PlayDetection" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="PlayDeath" to="." method="_on_play_death_body_entered"]
[connection signal="body_entered" from="PlayHit" to="." method="_on_play_hit_body_entered"]
[connection signal="timeout" from="jump_timer" to="." method="_on_jump_timer_timeout"]
